...
    <!-- About Screen -->
    <string name="copyright">Copyright © ffem</string>
    <string name="legal_information">Legal Information</string>
    <!-- Software notices -->
    <string name="software_notices">Software Notices</string>
    <string name="software_incorporates_material">This software incorporates material from the projects listed below</string>
    <string name="navigate_up">Navigate up</string>
    <string name="calibrate_summary">Calibrate a test with standards</string>

    <string name="titration_entry_error">%1$s has to be less than or equal to %2$s</string>

    <string name="skip">Skip</string>

...
